fixing style for scrollbar and steps screen display

--- a/styles/Goal.module.css
+++ b/styles/Goal.module.css
@@ -9,7 +9,7 @@
 }
 
 .showGoalForm::-webkit-scrollbar {
-    width: 1vw;
+    width: 0.5vw;
 }
 
 .showGoalForm::-webkit-scrollbar-thumb {
