--- a/styles/StepGoal.module.css
+++ b/styles/StepGoal.module.css
@@ -2,14 +2,6 @@
   display: flex;
 }
 
-.container {
-  display: flex;
-  border: none;
-  margin-bottom: 2cm;
-  overflow-y: scroll;
-  overflow-x: hidden;
-}
-
 .container::-webkit-scrollbar {
   width: 10px;
 }
